feat: findPatients simplified by extracting convertToPatientWithOperationDateDTO as a method in PatientController.